nav icon alignment fixed

--- a/src/components/MenuList/MenuList.css
+++ b/src/components/MenuList/MenuList.css
@@ -20,6 +20,3 @@
   fill: white;
   transition: 0.7s;
 }
-.focused {
-  fill: red;
-}
