--- a/src/components/NavIcon/NavIcon.css
+++ b/src/components/NavIcon/NavIcon.css
@@ -6,7 +6,6 @@
   align-items: center;
 }
 .nav-icon-container {
-  margin-left: -5%;
   width: 34px;
 }
 .icon-svg {
